# vertex-search-MCP

./: .gitignore  LICENSE  README.md  env.example  pyproject.toml
src/: search_tool.py
vertex_search_mcp/: server.py
